Add admin user listing controller method and generate swagger docs
